--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,3 +5,9 @@
 <div class="left">
   <app-left></app-left>
 </div>
+<div class="center">
+  <app-center></app-center>
+</div>
+<div class="footer">
+  <app-foot></app-foot>
+</div>
