--- a/src/app/center/center.component.css
+++ b/src/app/center/center.component.css
@@ -1,6 +1,6 @@
-.header{
-    height: 10vh;
-    width: 100vw;
+.center{
+    height: 70vh;
+    width: 90vw;
     /* background-color: red; */
     border: 2px solid black;
     text-align: center;
