--- a/src/app/left/left.component.css
+++ b/src/app/left/left.component.css
@@ -1,6 +1,7 @@
 .left{
     height: 70vh;
     width: 10vw;
-    background-color: red;
+    /* background-color: red; */
+    border: 2px solid black;
     text-align: center;
 }
